--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 		<h2>Informations de l'éole :</h2>
 		<ul>
 			<li>Nom: ESGI</li>
+      ecole
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
+      L'adresse de l'ecole
 			<li>Directeur: Kamal Sananes</li>
+      Les Directeurs
+      <li>Prof de git: Thomas Ecalle</li>
+      Professeur
 		</ul>
 	</section>
 </body>
